[package]
name = "serde_tiberius"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tiberius = { version = "0.12.2", features = ["chrono"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
